@@ -457,8 +457,8 @@ CONFIG_ARCH_BZERO=n
 CONFIG_MAX_TASKS=16
 CONFIG_MAX_TASK_ARGS=4
 CONFIG_NPTHREAD_KEYS=4
-CONFIG_NFILE_DESCRIPTORS=12
-CONFIG_NFILE_STREAMS=12
+CONFIG_NFILE_DESCRIPTORS=8
+CONFIG_NFILE_STREAMS=8
 CONFIG_NAME_MAX=32
 CONFIG_STDIO_BUFFER_SIZE=256
 CONFIG_NUNGET_CHARS=2
@@ -902,7 +902,7 @@ CONFIG_NSH_DISABLESCRIPT=n
 CONFIG_NSH_DISABLEBG=n
 CONFIG_NSH_ROMFSETC=n
 CONFIG_NSH_CONSOLE=y
-CONFIG_NSH_CONDEV="/dev/ttyS1"
+#CONFIG_NSH_CONDEV="/dev/ttyS1"
 CONFIG_NSH_TELNET=n
 CONFIG_NSH_ARCHINIT=y
 CONFIG_NSH_IOBUFFER_SIZE=512
@@ -953,6 +953,8 @@ CONFIG_EXAMPLES_USBSERIAL_TRACEINTERRUPTS=n
 #
 # Settings for examples/nx
 #
+# CONFIG_EXAMPLES_NX_BUILTIN -- Build the NX example as a "built-in"
+#  that can be executed from the NSH command line  
 # CONFIG_EXAMPLES_NX_VPLANE -- The plane to select from the frame-
 #   buffer driver for use in the test.  Default: 0
 # CONFIG_EXAMPLES_NX_DEVNO - The LCD device to select from the LCD
@@ -978,6 +980,7 @@ CONFIG_EXAMPLES_USBSERIAL_TRACEINTERRUPTS=n
 # CONFIG_EXAMPLES_NX_NOTIFYSIGNO -- The signal number to use with
 #   nx_eventnotify().  Default: 4
 #
+CONFIG_EXAMPLES_NX_BUILTIN=n
 CONFIG_EXAMPLES_NX_VPLANE=0
 CONFIG_EXAMPLES_NX_DEVNO=0
 CONFIG_EXAMPLES_NX_BGCOLOR=0x0011
