@@ -953,6 +953,8 @@ CONFIG_EXAMPLES_USBSERIAL_TRACEINTERRUPTS=n
 #
 # Settings for examples/nx
 #
+# CONFIG_EXAMPLES_NX_BUILTIN -- Build the NX example as a "built-in"
+#  that can be executed from the NSH command line  
 # CONFIG_EXAMPLES_NX_VPLANE -- The plane to select from the frame-
 #   buffer driver for use in the test.  Default: 0
 # CONFIG_EXAMPLES_NX_DEVNO - The LCD device to select from the LCD
@@ -978,6 +980,7 @@ CONFIG_EXAMPLES_USBSERIAL_TRACEINTERRUPTS=n
 # CONFIG_EXAMPLES_NX_NOTIFYSIGNO -- The signal number to use with
 #   nx_eventnotify().  Default: 4
 #
+CONFIG_EXAMPLES_NX_BUILTIN=n
 CONFIG_EXAMPLES_NX_VPLANE=0
 CONFIG_EXAMPLES_NX_DEVNO=0
 CONFIG_EXAMPLES_NX_BGCOLOR=0x0011
@@ -996,6 +999,8 @@ CONFIG_EXAMPLES_NX_EXTERNINIT=n
 #
 # Settings for examples/nxtext
 #
+# CONFIG_EXAMPLES_NXTEXT_BUILTIN -- Build the NXTEXT example as a "built-in"
+#  that can be executed from the NSH command line  
 # CONFIG_EXAMPLES_NXTEXT_VPLANE -- The plane to select from the frame-
 #   buffer driver for use in the test.  Default: 0
 # CONFIG_EXAMPLES_NXTEXT_DEVNO - The LCD device to select from the LCD
@@ -1028,7 +1033,8 @@ CONFIG_EXAMPLES_NX_EXTERNINIT=n
 #   thread. Default 80.
 # CONFIG_EXAMPLES_NXTEXT_NOTIFYSIGNO -- The signal number to use with
 #   nx_eventnotify().  Default: 4
-
+#
+CONFIG_EXAMPLES_NXTEXT_BUILTIN=n
 CONFIG_EXAMPLES_NXTEXT_VPLANE=0
 CONFIG_EXAMPLES_NXTEXT_DEVNO=0
 CONFIG_EXAMPLES_NXTEXT_BGCOLOR=0x0011
